Fix to stop stuttering on mobile scroll

--- a/styles/in-page-nav.css
+++ b/styles/in-page-nav.css
@@ -60,15 +60,23 @@
     color: #e7781e;
 }
 
+.has-in-page-nav article h1,
+	.has-in-page-nav article h2,
+	.has-in-page-nav article h3,
+	.has-in-page-nav article h4e
+{
+    border-left: 5px solid #EEE;
+	overflow: hidden;
+    padding-left: 15px;
+    margin-left: 5px;
+}
+
 .has-in-page-nav article h1.in-page-nav-active,
 	.has-in-page-nav article h2.in-page-nav-active,
 	.has-in-page-nav article h3.in-page-nav-active,
 	.has-in-page-nav article h4.in-page-nav-active
 {
-    border-left: 5px solid #e7781e;
-	overflow: hidden;
-    padding-left: 15px;
-    margin-left: 5px;
+    border-left-color: #e7781e;
 }
 
 #in-page-nav .expand-collapse
